# toro

./: .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  lefthook.yml  package.json  tsconfig.json  turbo.json
apps/design-guide/: index.html  package.json  vite.config.ts
apps/design-guide/src/: main.tsx  router.tsx
apps/design-guide/src/routes/: index.tsx
apps/design-guide/src/screens/: chat-design-guide.tsx
apps/desktop/: VERIFICATION.md  index.html  package.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: agent-rail-parts.test.ts  agent-rail-parts.tsx  agent-rail.tsx  chat-header-actions.tsx  chat-panel.tsx  editor-pane.tsx  file-explorer.tsx  inspector-panel.tsx  open-in-menu.tsx
apps/desktop/src/lib/: file-tree.test.ts  file-tree.ts  host-client.ts  project-picker.ts  use-host-state.ts
apps/host/: package.json
apps/host/src/: demo-agent.ts  http.ts  index.ts  runtime.test.ts  runtime.ts  server.ts
apps/internal/: index.html  package.json  tsconfig.json  vite.config.ts
apps/internal/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
apps/internal/src/routes/: __root.tsx  composer.tsx  empty.tsx  index.tsx  sidebar.tsx
scripts/: verify-design-guide.mjs  verify-internal-layout.mjs  verify-internal.mjs  verify-ui-chat-helpers.mjs  verify-ui-helpers.mjs  verify-ui.mjs
(+1 files in other folders)
