[package]
name = "toro-desktop"
version = "0.1.0"
description = "Toro ACP desktop client"
authors = ["851 Labs"]
edition = "2021"

[lib]
name = "toro_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-dialog = "2.7.1"
